Animation quality & render-frame tick with prepared-frame cache and GIF background fix
- Add AnimationQuality enum with Standard / High Frame Rate / High Resolution / Hi
gh Quality
- Drive High Frame Rate / High Quality via GameRenderer.render instead of client ti
ck
- New AnimationFrameScheduler for precise nanos-based timing
- PreparedFrameCache reuses mipmapped frames when size and scaling are consistent
- Scaling mode changes invalidate prepared frames without a full resource reload
- Restore GIF logical-screen background color filling for initial canvas and dispos
al method 2
- Upload retry policy now uses nanos instead of client ticks

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>