@@ -1,6 +1,8 @@
 package com.animatedtextures.util;
 
 import java.util.Map;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 
 /**
  * One atomically published animation snapshot and its exact atlas bindings.
@@ -8,9 +10,11 @@ import java.util.Map;
 record ActiveAnimationGeneration<K, V>(
         long reloadSequence,
         AnimatedTextureRegistrySnapshot snapshot,
-        Map<K, V> bindings
+        Map<K, V> bindings,
+        PreparedFrameCache frameCache,
+        AnimationFrameScheduler frameScheduler
 ) {
     ActiveAnimationGeneration {
-        bindings = Map.copyOf(bindings);
+        bindings = Collections.unmodifiableMap(new LinkedHashMap<>(bindings));
     }
 }
